# nbsystem

./: CMakeLists.txt  boundary.h  boundingbox.h  kernel2header.cmake  kernels.cl  kernelsSource.cl  kernelsSourceTrunc.cl  main.cpp  nbsystem.cpp  nbsystem.h  nbsystemsettings.cpp  nbsystemsettings.h  parameters.cfg  solverSettings.h
tests/test1/: parameters.cfg
utils/: makemovie.sh  movie.gnupl  positions.py  positions2.py  positions_entropy.py  positions_noborders.py  vel.py
