project(nbsystem)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
set(SRC_LIST ${SRC_LIST} boundingbox.h boundary.h)
#find_package(OpenCL REQUIRED)
#find_package(libconfig REQUIRED)
add_executable(${PROJECT_NAME} ${SRC_LIST})

target_link_libraries (${PROJECT_NAME} OpenCL config++)
#set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -fexceptions -fexpensive-optimizations -fopenmp -O3 -lconfig++ -lOpenCL")
